# callable

./: CHANGELOG.md  Cargo.toml
.github/workflows/: release-please.yml
src/: accept_ref.rs  argument.rs  chain.rs  gat.rs  imp.rs  lib.rs  maybe_handle_event.rs  traits.rs
src/imp/: macros.rs
tests/: callback_macro.rs
